--- a/puckworld.ipynb
+++ b/puckworld.ipynb
@@ -1232,7 +1232,16 @@
       "Episode 9550/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.359\n",
       "Episode 9560/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.363\n",
       "Episode 9570/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.339\n",
-      "Episode 9580/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.389\n"
+      "Episode 9580/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.389\n",
+      "Episode 9590/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.337\n",
+      "Episode 9600/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.350\n",
+      "Episode 9610/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.389\n",
+      "Episode 9620/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.401\n",
+      "Episode 9630/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.323\n",
+      "Episode 9640/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.403\n",
+      "Episode 9650/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.315\n",
+      "Episode 9660/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.316\n",
+      "Episode 9670/10000. Epsilon: 0.100. Average score in last 10 episodes: -0.384\n"
      ]
     }
    ],
